...
    <string name="invalid_Description">Description should not be empty</string>
    <string name="invalid_name">Name should not be empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="match">Match</string>
    <string name="setting">Setting</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email_adress">Email Address</string>
    <string name="yergalem_mekonnen">Yergalem Mekonnen</string>
    <string name="my_profile_image">my Profile Image</string>
    <string name="profile">profile</string>
    <string name="matches">matches</string>
...
